# win-ime-switch

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: errors.rs  lang.rs  main.rs  win.rs
